# farm-notebook-examples

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  INSTALL.md  README.md  SETUP.md  justfile  pyproject.toml
.claude/: documentation-review.local.md  github-social.local.md
.claude/agents/: notebook-developer.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-doctor.lock.yml  ci-doctor.md  ci.yml  daily-qa.lock.yml  daily-qa.md  issue-triage.lock.yml  issue-triage.md  q.lock.yml  q.md  update-docs.lock.yml  update-docs.md
notebooks/: ecological-monitoring-eov.ipynb  example.ipynb  getting-started.ipynb  grant-writing-for-farms.ipynb  livestock-health-records.ipynb  nsip-sheep-genetics.ipynb  pasture-grazing-management.ipynb  soil-testing-guide.ipynb
