[project]
name = "farm-notebook"
version = "0.1.0"
description = "Jupyter notebooks for experiments and learning"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = [
    "nbqa>=1.9.0",
    "ruff>=0.8.0",
]
data = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
]
all = ["farm-notebook[dev,data]"]

[project.urls]
Homepage = "https://github.com/zircote/farm-notebook"
Repository = "https://github.com/zircote/farm-notebook.git"
Issues = "https://github.com/zircote/farm-notebook/issues"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "nbqa>=1.9.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # Line too long (handled by formatter, relaxed for notebooks)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
